break long lines

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -172,7 +172,9 @@
     "        meta = pickle.load(f, encoding='bytes')\n",
     "    classes_names = [label.decode() for label in meta[b'label_names']]\n",
     "\n",
-    "    return (np.concatenate(X_train, axis=0), np.concatenate(y_train, axis=0)), (X_test, y_test), classes_names"
+    "    return ((np.concatenate(X_train, axis=0), np.concatenate(y_train, axis=0)),\n",
+    "            (X_test, y_test),\n",
+    "            classes_names)"
    ]
   },
   {
@@ -189,7 +191,8 @@
     "\n",
     "    indices = []\n",
     "    for label_code in range(10):\n",
-    "        class_indices = np.random.choice(np.where(y_train == label_code)[0], num_per_class, replace=False)\n",
+    "        class_indices = np.random.choice(np.where(y_train == label_code)[0], num_per_class,\n",
+    "                                         replace=False)\n",
     "        indices.append(class_indices)\n",
     "    return np.concatenate(indices)"
    ]
@@ -271,8 +274,9 @@
    "outputs": [],
    "source": [
     "def get_hog(img_array, block_norm='L2-Hys'):\n",
-    "    \"\"\"Caclucate HoG descriptors for an array of images. This function uses skimage implementation,\n",
-    "    which does not support RGB images, so they will be converted to grayscale.\n",
+    "    \"\"\"Caclucate HoG descriptors for an array of images. This function uses skimage\n",
+    "    implementation, which does not support RGB images, so they will be converted\n",
+    "    to grayscale.\n",
     "    \"\"\"\n",
     "\n",
     "    return np.array([hog(rgb2gray(img), block_norm=block_norm) for img in img_array])"
@@ -315,7 +319,8 @@
     "\n",
     "fig, (ax1, ax2) = plt.subplots(ncols=2, figsize=(10, 3), sharey=True)\n",
     "\n",
-    "for ax, array, title in ((ax1, hog_examples, 'per image'), (ax2, hog_examples.T, 'per descriptor')):\n",
+    "for ax, array, title in ((ax1, hog_examples, 'per image'),\n",
+    "                         (ax2, hog_examples.T, 'per descriptor')):\n",
     "    for row in array:\n",
     "        sns.kdeplot(row, color='black', linewidth=0.5, alpha=0.2, ax=ax)\n",
     "    sns.kdeplot(array.flatten(), color='r', linewidth=1, ax=ax, label='mean')\n",
@@ -478,7 +483,8 @@
    "outputs": [],
    "source": [
     "hog_svm_pipe.fit(hog_descriptors, y_train)\n",
-    "new_steps = [('hog_transformer', FunctionTransformer(func=get_hog, validate=False))] + hog_svm_pipe.steps\n",
+    "new_steps = ([('hog_transformer', FunctionTransformer(func=get_hog, validate=False))]\n",
+    "             + hog_svm_pipe.steps)\n",
     "hog_svm_pipe = Pipeline(new_steps)"
    ]
   },
@@ -636,7 +642,8 @@
    "outputs": [],
    "source": [
     "hog_rbf_pipe.fit(hog_descriptors, y_train)\n",
-    "new_steps = [('hog_transformer', FunctionTransformer(func=get_hog, validate=False))] + hog_rbf_pipe.steps\n",
+    "new_steps = ([('hog_transformer', FunctionTransformer(func=get_hog, validate=False))]\n",
+    "             + hog_rbf_pipe.steps)\n",
     "hog_rbf_pipe = Pipeline(new_steps)"
    ]
   },
@@ -793,10 +800,12 @@
     "\n",
     "cnn_codes = []\n",
     "\n",
-    "for img_batch in np.split(prepared_images, range(batch_size, len(prepared_images), batch_size)):\n",
+    "for img_batch in np.split(prepared_images,\n",
+    "                          range(batch_size, len(prepared_images), batch_size)):\n",
     "    cnn_codes.append(activations_func([img_batch, 0]))\n",
     "\n",
-    "cnn_codes = [np.concatenate(codes, axis=0).reshape(len(prepared_images), -1) for codes in zip(*cnn_codes)]"
+    "cnn_codes = [np.concatenate(codes, axis=0).reshape(len(prepared_images), -1)\n",
+    "             for codes in zip(*cnn_codes)]"
    ]
   },
   {
@@ -1089,7 +1098,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_steps = [('cnn_codes', FunctionTransformer(get_cnn_codes, validate=False))] + cnn_svm_pipe.steps\n",
+    "new_steps = ([('cnn_codes', FunctionTransformer(get_cnn_codes, validate=False))]\n",
+    "             + cnn_svm_pipe.steps)\n",
     "\n",
     "cnn_svm_pipe = Pipeline(new_steps)\n",
     "\n",
@@ -1178,7 +1188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_steps = [('cnn_codes', FunctionTransformer(get_cnn_codes, validate=False))] + cnn_rbf_pipe.steps\n",
+    "new_steps = ([('cnn_codes', FunctionTransformer(get_cnn_codes, validate=False))]\n",
+    "             + cnn_rbf_pipe.steps)\n",
     "\n",
     "cnn_rbf_pipe = Pipeline(new_steps)\n",
     "\n",
